updated mobile numbers

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 	<img src="assets/logo.jpg" width="200px">
-	<p> Phone number 9811464173</p>
-	<p> Secondary number 9811074785</p>
+	<p> Phone number 9811074785 and 9811464173</p>
 </body>
 </html>
