--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Utkarsh Group</title>
 </head>
 <body>
-	<img src="assets/logo.jpg" width="200px">
+	<img src="Assets/logo.jpg" width="200px">
 	<p> Phone number 9811074785 and 9811464173</p>
 </body>
 </html>
